# hennongxi-multi-agent-gis

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/web/: Dockerfile  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/src/: main.tsx  vite-env.d.ts
apps/web/src/api/: client.test.ts  client.ts  schema.generated.ts  sse.ts  (+2 more)
apps/web/vite/: amapSecurityProxy.test.ts  amapSecurityProxy.ts
data/: manifest.json
data/samples/: README.md
docs/: architecture.md  demo-runbook.md  dependencies.md  development.md  openapi.yaml  setup.md  spec.md  troubleshooting.md  verification.md
docs/decisions/: 001-postgis-durable-workflow.md
infra/db/migrations/: env.py  script.py.mako
infra/db/postgis/: 10-enable-postgis.sql  Dockerfile
infra/docker/: backend.Dockerfile
scripts/: cache_demo_data.py  compose_smoke.py  data_preflight.py  derive_watershed.py
services/analysis_agent/: pyproject.toml
services/analysis_agent/src/hennongxi_analysis_agent/: __init__.py  artifacts.py  change.py  execution.py  main.py  ndvi.py  raster.py  raster_io.py
services/analysis_agent/tests/: test_api.py  test_execution.py
services/analysis_agent/tests/integration/: test_analysis_network.py  test_network.py
services/analysis_agent/tests/unit/: test_artifacts.py  test_change.py  test_ndvi.py  test_raster_io.py
services/data_agent/: pyproject.toml
services/data_agent/src/hennongxi_data_agent/: __init__.py  dataset.py  main.py  preparation.py
services/data_agent/tests/: test_prepare_api.py
services/data_agent/tests/integration/: test_network.py
services/master/: pyproject.toml
services/master/src/hennongxi_master/: __init__.py  agent_client.py  amap.py  amap_smoke.py  events.py  health.py  http_safety.py  llm.py  llm_smoke.py  main.py  orchestrator.py  planning.py  repository.py  runtime.py  sse.py  sse_api.py  study_area.py  tasks.py  watershed.py  worker.py
services/master/tests/: conftest.py  test_agent_client.py  test_amap.py  test_amap_smoke.py  test_llm_adapter.py  test_llm_planning.py  test_llm_smoke.py  test_orchestrator.py  test_runtime.py  test_sse.py  test_sse_stream.py  test_study_area.py  test_watershed.py  test_worker.py
services/master/tests/integration/: test_event_store.py  test_migration.py  test_orchestration.py  test_repository.py  test_retry_recovery.py  test_sse.py  test_task_api.py
services/publisher_agent/: pyproject.toml
services/publisher_agent/src/hennongxi_publisher_agent/: __init__.py  catalog.py  main.py  publication.py  report.py  report_artifacts.py  tiles.py
services/publisher_agent/src/hennongxi_publisher_agent/assets/fonts/: FONT_SOURCE.md
services/publisher_agent/tests/: test_publication.py  test_publisher_api.py  test_publisher_catalog.py  test_publisher_publish_api.py  test_publisher_tiles.py  test_report.py  test_report_artifacts.py  test_report_download_api.py  test_report_font_asset.py
services/publisher_agent/tests/integration/: test_publisher_network.py
services/quality_agent/: pyproject.toml
services/quality_agent/tests/: test_artifacts.py  test_evaluation.py  test_quality_api.py  test_quality_artifacts.py
tasks/: plan.md  todo.md
tasks/approvals/: G2-reflectance-correction.md  G5-amap-web-service-integration.md  G6-amap-context-map.md
tests/: __init__.py  conftest.py  test_cache_demo_data.py  test_compose_smoke.py  test_compose_topology.py  test_data_preflight.py  test_derive_watershed.py  test_master_health.py  test_master_task_api.py  test_service_shells.py
tests/e2e/: Dockerfile  README.md  __init__.py  compose.yml  master.py  package.json  playwright.config.ts  pnpm-lock.yaml  run.sh  seed.py  support.py  test_compose_profile.py  test_master.py  test_seed.py  test_support.py  tsconfig.json
tests/e2e/tests/: complete-journey.spec.ts  fixtures.ts  readiness.spec.ts
tests/fixtures/: __init__.py  deterministic_gis.py
tests/integration/: harness.py  test_complete_chain.py  test_contract_and_fixture.py
(+41 files in other folders)
