[project]
name = "hennongxi-multi-agent-gis"
version = "0.1.0"
description = "A distributed multi-agent GIS demonstration for Shennongxi ecological monitoring"
requires-python = "==3.12.*"
dependencies = [
  "alembic==1.18.5",
  "asyncpg==0.31.0",
  "fastapi==0.139.2",
  "geopandas==1.1.4",
  "hennongxi-analysis-agent",
  "hennongxi-contracts",
  "hennongxi-data-agent",
  "hennongxi-master",
  "hennongxi-observability",
  "hennongxi-publisher-agent",
  "hennongxi-quality-agent",
  "httpx==0.28.1",
  "numpy==2.5.1",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "rasterio==1.5.0",
  "redis==8.0.1",
  "reportlab==5.0.0",
  "rio-tiler==9.4.0",
  "shapely==2.1.2",
  "sqlalchemy==2.0.51",
  "structlog==26.1.0",
  "uvicorn[standard]==0.51.0",
]

[dependency-groups]
dev = [
  "mypy==2.3.0",
  "openapi-spec-validator==0.7.2",
  "pyyaml==6.0.3",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "respx==0.22.0",
  "ruff==0.15.22",
  "types-pyyaml==6.0.12.20260518",
]

[tool.uv]
package = false

[tool.uv.sources]
hennongxi-analysis-agent = { workspace = true }
hennongxi-contracts = { workspace = true }
hennongxi-data-agent = { workspace = true }
hennongxi-master = { workspace = true }
hennongxi-observability = { workspace = true }
hennongxi-publisher-agent = { workspace = true }
hennongxi-quality-agent = { workspace = true }

[tool.uv.workspace]
members = ["packages/*", "services/*"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
asyncio_mode = "auto"
cache_dir = "/tmp/hennongxi-pytest-cache"
pythonpath = ["."]
testpaths = ["packages", "services", "tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
