[project]
name = "hennongxi-analysis-agent"
version = "0.1.0"
description = "Analysis Agent service"
requires-python = "==3.12.*"
dependencies = [
  "affine==2.4.0",
  "fastapi==0.139.2",
  "hennongxi-contracts",
  "hennongxi-observability",
  "numpy==2.5.1",
  "rasterio==1.5.0",
  "uvicorn[standard]==0.51.0",
]

[tool.uv.sources]
hennongxi-contracts = { workspace = true }
hennongxi-observability = { workspace = true }

[build-system]
requires = ["uv-build==0.11.29"]
build-backend = "uv_build"
