[project]
name = "hennongxi-data-agent"
version = "0.1.0"
description = "Data Agent service"
requires-python = "==3.12.*"
dependencies = [
  "fastapi==0.139.2",
  "geopandas==1.1.4",
  "hennongxi-contracts",
  "hennongxi-observability",
  "numpy==2.5.1",
  "pydantic==2.13.4",
  "rasterio==1.5.0",
  "shapely==2.1.2",
  "uvicorn[standard]==0.51.0",
]

[tool.uv.sources]
hennongxi-contracts = { workspace = true }
hennongxi-observability = { workspace = true }

[build-system]
requires = ["uv-build==0.11.29"]
build-backend = "uv_build"
