[project]
name = "hennongxi-publisher-agent"
version = "0.1.0"
description = "Publisher Agent service"
requires-python = "==3.12.*"
dependencies = [
  "fastapi==0.139.2",
  "hennongxi-contracts",
  "hennongxi-observability",
  "uvicorn[standard]==0.51.0",
]

[tool.uv.sources]
hennongxi-contracts = { workspace = true }
hennongxi-observability = { workspace = true }

[build-system]
requires = ["uv-build==0.11.29"]
build-backend = "uv_build"
